--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -4,11 +4,18 @@ on:
   push:
     branches:
       - 'main'
+    tags:
+      - "v*.*.*"
 
 jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
+      - 
+        name: GitHub Tag Name example
+        run: |
+         echo "Tag name from GITHUB_REF_NAME: $GITHUB_REF_NAME"
+         echo "Tag name from github.ref_name: ${{  github.ref_name }}"
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v3
